deploy/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tarapp
  labels:
    name: tarapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tarapp
  template:
    metadata:
      labels:
        app: tarapp
    spec:
      containers:
      - name: tarapp
        image: kapilsahu1038/tarapp:latest
        volumeMounts:
          - name: files-volume-mount
            mountPath: /app/api_uploaded_files
      volumes:
      - name: files-volume-mount
        persistentVolumeClaim:
          claimName: fileserver-pvc
      restartPolicy: Always
