deploy/deploy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tarapp
  labels:
    service: tarapp
spec:
  selector:
    app: tarapp
  ports:
  - port: 5001
    targetPort: 5001
